[FIX] Correction de l'espace entre figure et figcaption avec 'vertical-align' + valeur de hauteur corrigé pour les cartes + position images corrigé

--- a/sass/components/cards.scss
+++ b/sass/components/cards.scss
@@ -38,19 +38,25 @@
 
 .rest-card {
     figure {
-        height: 251px;
-        padding-bottom: 77px;
-        background-color: white;
+        width: 100%;
+        height: 174px;
 
         img {
             object-fit: cover;
             width: 100%;
             height: 100%;
+            vertical-align: bottom; /* Enlève  l'espace entre figure et figcaption */
         }
 
         figcaption {
             position: relative;
+            height: 77px;
             background-color: white;
+            padding: 15px 0 16px 12px;
+
+            :nth-child(1) {
+                margin-bottom: 4px;
+            }
         }
 
     }
@@ -70,12 +76,12 @@
 
 .card3 {
     img {
-        object-position: 0 -55px;
+        object-position: 0 -50px;
     }
 }
 
 .card4 {
     img {
-        object-position: 0 -60px;
+        object-position: 0 -55px;
     }
 }
